@@ -1,27 +1,33 @@
-<driver id="driver/ml85p">
- <name>ml85p</name>
- <url>http://www.pragana.net/gdiprinters.html</url>
+<driver id="driver/lbp660">
+ <name>lbp660</name>
+ <url>http://www.boichat.ch/nicolas/lbp660/</url>
  <execution>
   <filter />
-  <prototype>gs -q -dNOPAUSE -dPARANOIDSAFER -dBATCH -r600x600 -sDEVICE=pbmraw%A%Z -sOutputFile="|ml85p%B" - 1&gt; /dev/null 2&gt;&amp;1</prototype>
+  <prototype></prototype>
  </execution>
  <comments>
   <en>
-    Driver for the Samsung ML-85G and QL-85G laser winprinters.&lt;p&gt;
+
+    Driver for the Canon LBP-460 and LBP-660 laser winprinters.&lt;p&gt;
 
     Note that the driver talks directly to the parallel port. It must
     be configured for bidirectional access and it must use the I/O
     address 0x378. The driver must run SUID "root", so the printer is
     not suitable for security-critical systems. Any output destination
     specified in the printer spooler will be ignored.&lt;p&gt;
+
+    The Foomatic PPD files for this driver are not available on
+    linuxprinting.org because they are already contained in the driver
+    package.&lt;p&gt;
+
   </en>
  </comments>
  <printers>
   <printer>
-   <id>printer/Samsung-ML-85G</id><!-- Samsung ML-85G -->
+   <id>printer/Canon-LBP-460</id>
   </printer>
   <printer>
-   <id>printer/Samsung-QL-85G</id><!-- Samsung QL-85G -->
+   <id>printer/Canon-LBP-660</id>
   </printer>
  </printers>
 </driver>
