@@ -22,9 +22,33 @@
   <!--No "text"?--></lang>
   <autodetect>
   <!--no known parport probe information--></autodetect>
-  <functionality>F</functionality><!--unknown preferred "driver"-->
-  <unverified/><!--no "contrib_url"-->
+  <functionality>B</functionality><!--unknown preferred "driver"-->
+  <!--no "contrib_url"-->
+  <driver>lbp660</driver>
   <comments>
-    <en>PCL4/LJIIp emulation via Windows driver. When LBP460 is connected to W9x box, Linux can use it as SMB network-available HPLJ III. Both text and Ghostscript work.</en>
+    <en>
+
+      This is one of the so-called GDI- or winprinters, a printer with
+      a proprietary data protocol, which is not publicly documented by
+      the manufacturer.&lt;br&gt;
+
+      Fortunately, Nicolas Boichat has reverse-engineered the protocol
+      of the similar &lt;a
+      href="show_printer.cgi?recnum=Canon-LBP-660"&gt;LBP-660&lt;/a&gt;
+      using &lt;a
+      href="http://www.pragana.net/gdiprinters.html"&gt;the techniques
+      described by Rildo Pragana&lt;/a&gt;, which lead to &lt;a
+      href="show_driver.cgi?driver=lbp660&amp;fromprinter=Canon-LBP-460"&gt;this
+      driver&lt;/a&gt;. Then Rildo Pragana has added support for the
+      LBP-460 to the driver, using an LBP-460 which Till Kamppeter
+      brought him from Mandriva (Mandrakesoft in that time).&lt;br&gt;
+
+      Old comments:&lt;br&gt;
+
+      PCL4/LJIIp emulation via Windows driver. When LBP460 is
+      connected to W9x box, Linux can use it as SMB network-available
+      HPLJ III. Both text and Ghostscript work.&lt;br&gt;
+
+    </en>
   </comments>
 </printer>
