@@ -24,10 +24,29 @@
   </lang>
   <autodetect>
   <!--no known parport probe information--></autodetect>
-  <functionality>F</functionality><!--unknown preferred "driver"-->
-  <unverified/><!--no "contrib_url"-->
+  <functionality>B</functionality><!--unknown preferred "driver"-->
+  <!--no "contrib_url"-->
+  <driver>lbp660</driver>
   <comments>
-    <en>Offers PCL emulation, but this appears to be in software.
-&lt;br&gt;Even if PCL is in firmware, it is limited to 300dpi.</en>
+    <en>
+
+      This is one of the so-called GDI- or winprinters, a printer with
+      a proprietary data protocol, which is not publicly documented by
+      the manufacturer.&lt;br&gt;
+
+      Fortunately, Nicolas Boichat has reverse-engineered the protocol
+      using &lt;a
+      href="http://www.pragana.net/gdiprinters.html"&gt;the techniques
+      described by Rildo Pragana&lt;/a&gt;, which lead to &lt;a
+      href="show_driver.cgi?driver=lbp660&amp;fromprinter=Canon-LBP-660"&gt;this
+      driver&lt;/a&gt;.&lt;br&gt;
+
+      Old comments:&lt;br&gt;
+
+      Offers PCL emulation, but this appears to be in software.&lt;br&gt;
+
+      Even if PCL is in firmware, it is limited to 300dpi.&lt;br&gt;
+
+    </en>
   </comments>
 </printer>
