@@ -1,3 +1,13 @@
+2005-07-12  Till Kamppeter <till.kamppeter@gmx.net>
+
+	* printer/Canon-LBP-460.xml, printer/Canon-LBP-660.xml: These
+	  printers are supported by the "lbp660" driver, updated text and
+	  rating.
+
+	* driver/lbp660.xml: Added "lbp660" driver.
+
+	* driver/ml85p.xml: Updated URL.
+
 2005-07-11  Tim Waugh  <twaugh@redhat.com>
 
 	* printer/HP-OfficeJet_G55.xml: Added IEEE 1284 information (RH
